--- a/elastic_importer.ipynb
+++ b/elastic_importer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -24,7 +24,7 @@
     "        reload(sys)\n",
     "        sys.setdefaultencoding('utf-8')\n",
     "        \n",
-    "    def import_file(self,file_path, index, doc_type):\n",
+    "    def import_file(self,file_path, index, doc_type, id_column):\n",
     "        with open(file_path, 'rb') as csvfile:\n",
     "            reader = csv.reader(csvfile,quotechar='\"')\n",
     "            batch_count = 0\n",
@@ -36,19 +36,20 @@
     "                \n",
     "                rows.append(row)\n",
     "                if len(rows) == self.batch_size:\n",
-    "                    self.import_to_es(header, rows, index, doc_type)\n",
+    "                    self.import_to_es(header, rows, index, doc_type,id_column)\n",
     "                    rows = []\n",
     "                \n",
     "                if idx%1000 == 0: \n",
     "                    print 'imported {0} rows for index {1}'.format(idx, index)\n",
     "                    \n",
     "\n",
-    "    def import_to_es(self, header, rows, index, doc_type):\n",
+    "    def import_to_es(self, header, rows, index, doc_type, id_column):\n",
     "        actions = []\n",
     "        for row in rows:\n",
     "            action = dict(zip(header, row))\n",
     "            action['_index'] = index\n",
     "            action['_type'] = doc_type\n",
+    "            action['_id'] = action.pop(id_column)\n",
     "            actions.append(action)\n",
     "        helpers.bulk(self.es, actions)\n",
     "    \n",
@@ -219,7 +220,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -228,7 +231,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
